--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	<meta property="og:site_name" content="Todo en Muebles C.R" />
 	<meta property="og:title" content="Todo En Muebles CR" />
 	<meta property="og:description" content="'Creamos espacios' Fabricamos, Diseñamos y te Asesoramos -" />
-	<meta property="og:image" content="https://todoenmueblesprueba.000webhostapp.com/img/cocina/co6.jpg" />
+	<meta property="og:image" content="https://todoenmuebles.github.io/img/logo2.png" />
 	<meta property="og:type" content="website" />
 	<meta property="og:image:type" content="image/jpeg">	
 	<meta property="og:image:alt" content="Todo en muebles - 'Creamos espacios' Fabricamos, Diseñamos y te Asesoramos" />
 	<meta property="og:image:width" content="640">
 	<meta property="og:image:height" content="300">
-	<meta property="og:url" content="https://todoenmueblesprueba.000webhostapp.com/"> 	
+	<meta property="og:url" content="https://todoenmuebles.github.io/index.html"> 	
 
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
