--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:site_name" content="Todo en Muebles C.R" />
 	<meta property="og:title" content="Todo En Muebles CR" />
 	<meta property="og:description" content="'Creamos espacios' Fabricamos, Diseñamos y te Asesoramos -" />
-	<meta property="og:image" content="https://todoenmuebles.github.io/img/logo2.png" />
+	<meta property="og:image" content="https://todoenmuebles.github.io/img/madera/pyc/pyc5.1.jpg" />
 	<meta property="og:type" content="website" />
 	<meta property="og:image:type" content="image/jpeg">	
 	<meta property="og:image:alt" content="Todo en muebles - 'Creamos espacios' Fabricamos, Diseñamos y te Asesoramos" />
